# tiny-ai-client

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pythonpublish.yml
assets/: config.yaml
examples/: anthropic_.py  consensus.py  gemini_.py  groq_.py  ollama_.py  openai_.py
scripts/: run-all-examples.sh
tiny_ai_client/: __init__.py  anthropic_.py  gemini_.py  groq_.py  models.py  ollama_.py  openai_.py  tools.py  vision.py
util/: yaml_config.py
