[tool.poetry]
name = "tiny-ai-client"
version = "0.0.12"
description = "Tiny AI client for LLMs. As simple as it gets."
authors = ["piEsposito <piero.skywalker@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
pydantic = "2.7.3"
openai = "1.31.0"
anthropic = "0.28.0"
pillow = "^10.3.0"
groq = "^0.9.0"
python-dotenv = "^1.0.1"
aiohttp = "^3.10.3"


[tool.poetry.group.gemini]
optional = false

[tool.poetry.group.gemini.dependencies]
google-generativeai = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
